bug: fixed svg problem on IE

--- a/public_html/css/app.css
+++ b/public_html/css/app.css
@@ -37,12 +37,12 @@ header {
     display: flex;
     -webkit-box-pack: center;
     -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     -webkit-box-align: center;
     -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     margin-bottom: 50px;
 }
 
@@ -79,13 +79,13 @@ header {
 
 .text_showed { /* Chrome, Safari, Opera */
     -webkit-transform: translate(0, -200px);
-            transform: translate(0, -200px);
+    transform: translate(0, -200px);
     opacity: 0;
 }
 
 .moved { /* Chrome, Safari, Opera */
     -webkit-transform: rotate(220deg);
-            transform: rotate(220deg);
+    transform: rotate(220deg);
 }
 
 .sort_link {
@@ -112,8 +112,8 @@ h4 {
     display: -ms-flexbox;
     display: flex;
     -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
 }
 
 .gallery_item {
@@ -121,8 +121,8 @@ h4 {
     max-width: 50%;
     -webkit-box-flex: 1;
     -webkit-flex: 1 50%;
-        -ms-flex: 1 50%;
-            flex: 1 50%;
+    -ms-flex: 1 50%;
+    flex: 1 50%;
     box-sizing: border-box;
     transition: all .5s ease;
     -webkit-transition: all .5s ease;
@@ -143,7 +143,7 @@ h4 {
 
 .pics { /* Safari */
     -webkit-transition-delay: 0.3s;
-            transition-delay: 0.3s;
+    transition-delay: 0.3s;
     -webkit-transition: opacity 0.5s ease-in-out;
     transition: opacity 0.5s ease-in-out;
     opacity: 0;
@@ -183,12 +183,12 @@ h4 {
     display: flex;
     -webkit-box-pack: center;
     -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     -webkit-box-align: center;
     -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 .popup_container_h {
@@ -198,8 +198,8 @@ h4 {
 .img_link {
     -webkit-box-flex: 1;
     -webkit-flex: 1 80%;
-        -ms-flex: 1 80%;
-            flex: 1 80%;
+    -ms-flex: 1 80%;
+    flex: 1 80%;
     height: 100%;
 }
 
@@ -207,7 +207,7 @@ h4 {
     max-height: 100%;
     max-width: 100%;/* Safari */
     -webkit-transition-delay: 0.3s;
-            transition-delay: 0.3s;
+    transition-delay: 0.3s;
     transition: all .5s ease-in-out;
     -webkit-transition: all .5s ease-in-out;
     opacity: 0;
@@ -222,13 +222,14 @@ h4 {
     opacity: 0.5;
     -webkit-box-flex: 1;
     -webkit-flex: 1 10%;
-        -ms-flex: 1 10%;
-            flex: 1 10%;
+    -ms-flex: 1 10%;
+    flex: 1 10%;
 }
 
 .arrows img {
     vertical-align: middle;
     max-width: 60px;
+    max-height: 80px;
 }
 /*******************DETAILS**/
 .popup_details_top,
@@ -270,6 +271,7 @@ h4 {
 
 .close_btn a img {
     width: 2em;
+    height: 2em;
     padding: 1em;
 }
 
@@ -301,7 +303,7 @@ h4 {
 .popup-enter .popup_container,
 .popup-leave .popup_container {
     -webkit-transform: scale(.1);
-            transform: scale(.1);
+    transform: scale(.1);
 }
 
 /******************
